@@ -4,7 +4,8 @@ APACHE_MODPATH_INIT(http)
 
 http_objects="http_core.lo http_protocol.lo http_request.lo"
 
-APACHE_MODULE(http, HTTP protocol handling, $http_objects, , yes)
+dnl mod_http freaks out when built as a DSO
+APACHE_MODULE(http, HTTP protocol handling, $http_objects, , static)
 APACHE_MODULE(mime, mapping of file-extension to MIME, , , yes)
 
 APACHE_MODPATH_FINISH
